k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forkit
  labels:
    app.kubernetes.io/part-of: forkit
