k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forkit-site
  namespace: forkit
  labels:
    app: forkit-site
spec:
  selector:
    app: forkit-site
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
---
# Expose externally (remove if using Ingress instead)
apiVersion: v1
kind: Service
metadata:
  name: forkit-site-external
  namespace: forkit
  labels:
    app: forkit-site
spec:
  selector:
    app: forkit-site
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
